fix #92, tooltip pcts. reporting looks cut off in FF

--- a/common/assets/css/_tooltip.scss
+++ b/common/assets/css/_tooltip.scss
@@ -37,6 +37,14 @@ body {
 
 			}
 
+			tfoot tr {
+				position: relative;
+
+				td.precincts {
+					top: 0;
+				}
+			}
+
 			.candidate-name {
 
 				.name {
